monitor/prometheus/prometheus-service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    prometheus: k8s
spec:
  clusterIP: None
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
  selector:
    app: prometheus
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: promethues-extern
  namespace: monitoring
  labels:
    prometheus: k8s
spec:
  ports:
  - port: 9090
    name: web
    nodePort: 30909
  type: NodePort
  selector:
    app: prometheus
