monitor/prometheus/prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    cattle.io/creator: norman
  name: prometheus-ui
  namespace: monitoring
spec:
  rules:
  - host: prometheus.deepblueai.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
